--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -7,7 +7,14 @@
     <title>Document</title>
 </head>
 <body>
-    <h3>Day 11 workshop</h3>
-    <img src="images/IMG_4217.jpg" alt="peko">
+    <h1>LOOK AT MORPEKO ISNT IT CUTE???</h1>
+    <img src="images/morpeko-pokemon.gif" alt="peko">
+    <h3>Will you give him food?</h3>
+    <input type="radio" id="yes" name="peko" value="yes">
+    <label for="yes">yes</label><br>
+    <input type="radio" id="no" name="peko" value="no">
+    <label for="no">no</label><br>
+    <input type="submit" value="Submit">
+    
 </body>
 </html>
