--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>LOOK AT MORPEKO ISNT IT CUTE???</h1>
     <img src="images/morpeko-pokemon.gif" alt="peko">
-    <h3>Will you give him food?</h3>
+    <h3>Will you give it food?</h3>
     <input type="radio" id="yes" name="peko" value="yes">
     <label for="yes">yes</label><br>
     <input type="radio" id="no" name="peko" value="no">
